<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile"/>
        <item
            android:id="@+id/nav_cases"
            android:icon="@drawable/ic_cases"
            android:title="@string/nav_cases"/>
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_reports"
            android:title="@string/nav_reports"/>
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_expenses"
            android:title="@string/nav_expenses"/>
        <item
            android:id="@+id/nav_invoices"
            android:icon="@drawable/ic_invoices"
            android:title="@string/nav_invoices"/>
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/nav_calendar"/>
        <item
            android:id="@+id/nav_training"
            android:icon="@drawable/ic_training"
            android:title="@string/nav_training"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings"/>
    </group>
</menu>
